# hephaestus

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imgui.ini
.cache/clangd/index/: VkBootstrap.cpp.1FE8E3806D70B966.idx  VkBootstrap.h.23AC2D596B7FBD1C.idx  VkBootstrapDispatch.h.9A59DC525EDA831C.idx  _fixes.hpp.D1BE112D5BFBB095.idx  _vectorize.hpp.72D2EE92E5A85153.idx  common.hpp.CA3EA067CD5F08A9.idx  compute_common.hpp.2601374170F5D098.idx  compute_vector_relational.hpp.33C687720477A062.idx  constants.hpp.9B43BE3A6B4824E6.idx  constants.inl.EE0B2BFCF5902DD9.idx  exponential.hpp.3B8613F26AC8A000.idx  func_common.inl.D45D9D9DD361942A.idx  func_exponential.inl.5CB4DB0CC1682736.idx  func_geometric.inl.7A61D9AB0B3A311C.idx  func_integer.inl.7A73E1C2256DAE40.idx  func_matrix.inl.9E2F2D6B1830268C.idx  func_packing.inl.F69D9ABBD27087AF.idx  func_trigonometric.inl.5263E7F25C5F039F.idx  func_vector_relational.inl.0993D29C68EBE7C8.idx  fwd.hpp.4DACE317EAA0B019.idx  geometric.hpp.978AF5233B7B5A25.idx  glm.hpp.EDF49323D1D88758.idx  (+151 more)
asset_core/: CMakeLists.txt  Makefile  asset_main.cpp  cmake_install.cmake
assets/: Room.mtl
shaders/: colored_triangle.vert  grid.vert  grid.vert.spv  tri_mesh.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  Makefile  cmake_install.cmake  dia.h  dia.mm  main.cpp  physics.cpp  physics.h  player_camera.cpp  player_camera.h  vk_char_control.cpp  vk_char_control.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_textures.h  vk_types.h
